--- a/src/XNAManager/ModsManager.csproj
+++ b/src/XNAManager/ModsManager.csproj
@@ -71,8 +71,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BetaMMUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BetaMMUI.Designer.cs">
+      <DependentUpon>BetaMMUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Files.cs" />
     <Compile Include="LogFile.cs" />
+    <Compile Include="MMUIBugReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MMUIBugReport.Designer.cs">
+      <DependentUpon>MMUIBugReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MMUIMods.cs" />
+    <Compile Include="MMUIProgramInfo.cs" />
+    <Compile Include="MMUIResources.cs" />
     <Compile Include="Mods.cs" />
     <Compile Include="ModsManager.cs" />
     <Compile Include="Profile.cs" />
@@ -97,9 +112,15 @@
     </Compile>
     <Compile Include="JSON\Write.cs" />
     <Compile Include="OSystem.cs" />
+    <EmbeddedResource Include="BetaMMUI.resx">
+      <DependentUpon>BetaMMUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MMUIBugReport.resx">
+      <DependentUpon>MMUIBugReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -150,7 +171,69 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Info_icon.png" />
+    <None Include="Resources\Close_100px.png" />
+    <None Include="Resources\White_Wrench_100px.png" />
+    <None Include="Resources\White_User_Menu_Male_100px.png" />
+    <None Include="Resources\White_Uninstalling_100px.png" />
+    <None Include="Resources\White_Unchecked_Checkbox_100px.png" />
+    <None Include="Resources\White_Trash_100px.png" />
+    <None Include="Resources\White_Toggle_On_100px.png" />
+    <None Include="Resources\White_Toggle_Off_100px.png" />
+    <None Include="Resources\White_Star_Filled_100px.png" />
+    <None Include="Resources\White_Star_100px.png" />
+    <None Include="Resources\White_Speed_100px.png" />
+    <None Include="Resources\White_Source_Code_100px.png" />
+    <None Include="Resources\White_Software_Installer_100px.png" />
+    <None Include="Resources\White_Settings_Hover_100px.png" />
+    <None Include="Resources\White_Settings_100px.png" />
+    <None Include="Resources\White_Send_Email_100px.png" />
+    <None Include="Resources\White_Search_100px.png" />
+    <None Include="Resources\White_Sad_100px.png" />
+    <None Include="Resources\White_Reset_96px.png" />
+    <None Include="Resources\White_Rename_100px.png" />
+    <None Include="Resources\White_Refresh_100px.png" />
+    <None Include="Resources\White_Plus_100px.png" />
+    <None Include="Resources\White_Play_100px.png" />
+    <None Include="Resources\White_Paint_Brush_100px.png" />
+    <None Include="Resources\White_More_100px.png" />
+    <None Include="Resources\White_Minimize_Window_96px.png" />
+    <None Include="Resources\White_Menu_100px.png" />
+    <None Include="Resources\White_Mana_100px.png" />
+    <None Include="Resources\White_Love_100px.png" />
+    <None Include="Resources\White_LOG_100px.png" />
+    <None Include="Resources\White_Linking_100px.png" />
+    <None Include="Resources\White_JSON_100px.png" />
+    <None Include="Resources\White_Installing_100px.png" />
+    <None Include="Resources\White_Information_100px.png" />
+    <None Include="Resources\White_Info_100px.png" />
+    <None Include="Resources\White_Heart_Outline_100px.png" />
+    <None Include="Resources\White_Heart_100px.png" />
+    <None Include="Resources\White_Handshake_Heart_100px.png" />
+    <None Include="Resources\White_FullScreen_Hover_100px.png" />
+    <None Include="Resources\White_FullScreen_100px.png" />
+    <None Include="Resources\White_Forward_100px.png" />
+    <None Include="Resources\White_Fit_to_Width_100px.png" />
+    <None Include="Resources\White_Extensions_Folder_100px.png" />
+    <None Include="Resources\White_Expand_Arrow_100px.png" />
+    <None Include="Resources\White_Error_100px.png" />
+    <None Include="Resources\White_Erase_100px.png" />
+    <None Include="Resources\White_Dragon_100px.png" />
+    <None Include="Resources\White_Download_100px.png" />
+    <None Include="Resources\White_Discord_100px.png" />
+    <None Include="Resources\White_Disconnected_100px.png" />
+    <None Include="Resources\White_Delete_100px.png" />
+    <None Include="Resources\White_Crop_100px.png" />
+    <None Include="Resources\White_Collapse_Arrow_100px.png" />
+    <None Include="Resources\White_Collapse_100px.png" />
+    <None Include="Resources\White_Clear_Symbol_100px.png" />
+    <None Include="Resources\White_Checked_Checkbox_100px.png" />
+    <None Include="Resources\White_Bug_100px.png" />
+    <None Include="Resources\White_Back_100px.png" />
+    <None Include="Resources\White_Automation_100px.png" />
+    <None Include="Resources\White_Approval_100px.png" />
+    <None Include="Resources\White_Advance_100px.png" />
+    <EmbeddedResource Include="Resources\White_Reset_96px_1.png" />
+    <EmbeddedResource Include="Resources\Logo_100x50.png" />
     <None Include="ModsManager\Resources\Info_icon.png" />
     <EmbeddedResource Include="ModsManager\Resources\preview_xl.png" />
     <None Include="FodyWeavers.xml" />
